app/assets/stylesheets/dashboard.css.scss
@import "common";

::-webkit-scrollbar {
    width: 10px;
}

::-webkit-scrollbar-track {
  background-color: #eee;
  border-radius: 5px;
}

::-webkit-scrollbar-thumb {
  background-color: #aaa;
  border-radius: 5px;
}

.container {
  margin: 0 auto;
  width: $container-width;
}

.editor-container {
  margin: 0 auto;
  width: $editor-container-width;

  .alert-message {
    margin-right: -364px;
    top: 102px;
  }
}

// signup, login
.signup,
.login {
  margin: 150px auto;
  width: 350px;
  padding: 40px;
  background-color: #fff;
  @include box-shadow(0 1px 8px rgba(0, 0, 0, 0.3));

  .field {
    width: 100%;

    #{$all-text-inputs},
    textarea {
      width: 100%;
    }
  }
}

// topbar

#topbar {
  background-color: #fff;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 10;
  border-bottom: 1px solid #ccc;
  font-weight: bold;
  @include linear-gradient(#fff, #eee);
  @include transition(top 0.15s ease);
  @include box-shadow(0 0px 5px rgba(0, 0, 0, 0.3));

  ul.top-nav {
    margin: 0;
    padding: 0;
    list-style: none;
    @include clearfix();

    > li {
      display: inline-block;
      float: left;

      > a {
        padding: 15px 20px;
        display: block;
        color: #555;
        @include transition(all 0.15s ease);

        &:hover {
          background-color: #eee;
          text-decoration: none;
        }
      }
    }
  }

  .dropdown {
    .dropdown-toggle {
      padding: 15px 30px 15px 20px;
      color: #555;
      vertical-align: baseline;

      &:after {
        padding: 2px 15px;
      }

      &:hover {
        background-color: #eee;
      }
    }

    .dropdown-menu {
      top: 49px;
      width: 150px;
      font-weight: normal;

      li {
        a {
          padding: 10px 15px 9px;
        }
      }
    }

    &.actived {
      .dropdown-toggle {
        background-color: #eee;
      }
    }
  }
}

// main

html,
body,
#main,
#main .container {
  height: 100%;
}

#main .container .inner {
  min-height: 100%;
  @include box-sizing(border-box);
}

#main {
  .inner {
    background-color: #fff;
    padding-top: 49px;
    @include box-shadow(0 1px 8px rgba(0, 0, 0, 0.3));
    @include clearfix();

    section {
      padding: 20px;
    }

    .tabs {
      position: fixed;
      top: 49px;
      z-index: 9;
      width: 960px - 200px;

      .tabs-inner {
        background-color: #f9f9f9;
        border-bottom: 1px solid #ccc;
        padding: 10px 20px;

        .label {
          padding: 7px 14px 7px 0;
          display: inline-block;
          color: #999;
          font-weight: bold;
        }
      }
    }

    .tabs-margin {
      margin-top: 55px;
    }

    #bulkbar {
      visibility: visible;
      opacity: 1;
      @include transition(opacity 0.15s ease);

      .inner {
        @include box-shadow(none);
      }

      &.bulkbar-hide {
        visibility: hidden;
        opacity: 0;
        @include transition(visibility 0s ease 0.15s, opacity 0.15s ease);
      }
    }

    #book-selector.dropdown {
      .dropdown-toggle {
        width: 100px;
      }

      .dropdown-menu {
        width: 137px;
      }
    }

    #main-nav {
      position: fixed;
      width: 200px;
      height: 100%;
      color: #fff;
      border-right: 1px solid #ccc;
      height: 100%;
      top: 0;
      padding-top: 49px;
      @include box-sizing(border-box);

      .scroll-nav {
        position: fixed;
        top: 0;
        padding-top: 164px;
        height: 100%;
        width: 199px;
        z-index: -1;
        @include box-sizing(border-box);

        nav {
          overflow-y: auto;
          height: 100%;
        }
      }

      nav {
        li {
          hr {
            margin: 0;
          }

          a {
            display: block;
            color: #555;
            padding: 10px 20px;

            .pull-right {
              display: none;
            }

            &.actived,
            &:hover {
              text-decoration: none;
              background-color: #eee;

              .pull-right {
                display: block;
              }
            }
          }
        }
      }
    }

    #main-content {
      float: left;
      margin-left: 200px;
      width: 960px - 200px;
    }
  }

  #articles {
    table {
      width: 100%;

      tr {
        border-bottom: 1px solid #ddd;

        &.selected {
          background-color: lighten(yellow, 40%);
        }

        &:hover {
          background-color: lighten(yellow, 40%);
          cursor: pointer;
        }

        &.publish {
          .icon-status:before {
            color: gray;
            content: "\f0f6";
          }
        }

        &.draft {
          .icon-status:before {
            color: gray;
            content: "\f016";
          }
        }

        &.trash {
          .icon-status:before {
            color: gray;
            content: "\f014";
          }
        }
      }

      td {
        padding: 15px 20px;

        &.title {
          width: 99%;

          i {
            margin-right: 5px;
          }
        }

        &.book,
        &.date {
          width: 1%;
          white-space: nowrap;
          text-align: right;
        }

        .book_name {
          font-size: 0.9em;
          color: #fff;
          padding: 3px 5px;
          background-color: #999;
          border-radius: 3px;
        }
      }

      a {
        color: #555;

        &:hover {
          color: $linkColor;
        }
      }
    }
  }

  #empty-message {
    text-align: center;
    margin: 20px;
    padding: 20px;
    font-size: 1.5em;
    border: 2px dashed #ccc;
    color: #999;
  }

  #end-message {
    text-align: center;
    margin: 20px;
    padding: 20px;
    font-size: 1.5em;
    color: #999;
  }

  #articles-spinner {
    text-align: center;
    padding: 20px;
    font-size: 1.5em;
    color: #999;
  }
}

// editor

#editor-header {
  @include box-shadow(none);

  .pull-right {
    padding: 15px 0;
  }

  .button {
    display: inline;
  }
}

#toolbar {
  background-color: #555;
  position: fixed;
  top: 45px;
  left: 0;
  right: 0;
  z-index: 9;
  @include box-shadow(0 1px 8px rgba(0, 0, 0, 0.3));
  @include transition(top 0.15s ease);

  ul.toolbar-buttons {
    margin: 0;
    padding: 0;
    list-style: none;
    @include clearfix();

    [class^="icon-"], [class*=" icon-"] {
      line-height: 14px;
    }

    li {
      display: inline-block;
      float: left;

      a {
      }

      .toolbar-button {
        padding: 10px;
        display: block;
        color: #fff;

        &:hover {
          text-decoration: none;
          color: #555;
          background-color: #f9f9f9;
        }

        &.actived,
        &:active {
          color: #555;
          background-color: #f9f9f9;
        }

        &.disabled,
        &.disabled:hover,
        &.disabled:focus {
          color: #999;
          background-color: #555;
        }
      }
    }

    p, h1, h2, h3, h4, pre, blockquote {
      padding: 0;
      margin: 0;
    }

    .dropdown {
      position: relative;

      .dropdown-toggle {
        width: 80px;
        padding-right: 20px;
        font-weight: bold;
        line-height: 14px;

        &:after {
          right: 0;
          padding: 2px 10px;
        }
      }

      .dropdown-menu {
        top: 36px;
        left: 0;

        li {
          display: block;
          float: none;

          a {
            padding: 10px;

            &:hover {
              h1, h2, h3, h4 {
                color: #fff;
              }
            }
          }
        }
      }

      &.actived {
        .dropdown-toggle {
          color: #555;
          background-color: #f9f9f9;
        }
      }
    }
  }
}

#editarea {
  margin-top: 82px;
  @include transition(margin-top 0.15s ease);

  article {
    background: #FFF;
    padding: 70px;
    outline: 0;
    min-height: 1024px;
    margin-bottom: 60px;
    border: 1px solid #ccc;
  }
}

.pick-up-topbar {
  #topbar {
    top: -49px;
  }

  #toolbar {
    top: 0;
  }

  #editarea {
    margin-top: 37px;
  }

  #pick-up-button.icon-double-angle-up:before {
    content: "\f103";
  }

  .alert-message {
    top: 57px;
  }
}

